before H2